<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/course_shape"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 辅助器械 -->

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/grip_text"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:text="@string/instrument"
        android:textSize="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/grip_img"
        android:text="杠铃"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintLeft_toRightOf="@+id/grip_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- 适合人群 -->

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/for_people"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grip_img"/>

    <TextView
        android:id="@+id/for_human"
        android:text="局部肥胖者"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toBottomOf="@+id/grip_img"
        app:layout_constraintLeft_toRightOf="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- 禁忌人群 -->

    <TextView
        android:id="@+id/target_frequency"
        android:text="@string/forbid_people"
        android:layout_marginLeft="15dp"
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_text"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/target_count"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:text="125分/次"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        app:layout_constraintTop_toBottomOf="@+id/for_human"
        app:layout_constraintLeft_toRightOf="@+id/target_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!-- 姿势要领 -->

    <TextView
        android:id="@+id/target_gesture"
        android:text="@string/ranking_gesture"
        android:layout_marginLeft="15dp"
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_frequency"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/target_action_step"
        android:text="@string/action_step"
        android:layout_marginLeft="15dp"
        android:textSize="10sp"
        android:textColor="@color/white"
        android:singleLine="false"
        android:lineSpacingExtra="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_gesture"
        android:layout_marginTop="6dp"
        android:layout_width="233dp"
        android:layout_height="wrap_content"/>


</android.support.constraint.ConstraintLayout>